# mp-api-client

./: .env  .gitignore  README.md  clientv2.spec  events.json  events.txt  pyproject.toml  requirements.txt
.github/workflows/: sync-events.yml
mp_api_client/: client.py  clientv2.py  events.json
